[package]
name = "rocket_sqlxsession"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Flask-sessionstore like library using SQLx for Rocket.rs. 0.5"
edition = "2018"
license = "MIT"
repository = "https://github.com/genusistimelord/rocket_sqlxsession"
readme = "README.md"
keywords = ["rocket", "session", "flask"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
parking_lot = "0.11.1"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
anyhow = "1.0"
futures = "0.3"
log = { version = "0.4", default-features = false }